# PhotoFlow-Master

./: GUI_PROPOSALS.md  IMPROVEMENTS.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: guide_utilisation.md
electron-app/: .gitignore  README.md  main.js  package.json  preload.js
electron-app/renderer/: index.html  renderer.js  styles.css
electron-app/src/: exifReader.js  fileOperations.js  projectStructure.js
src/: PhotoFlow Master.py  photoflow_cli.py  photoflow_gui.py  photoflow_gui_improved.py
src/photoflow/: __init__.py  constants.py  core.py  exceptions.py  exif_handler.py  file_manager.py  logging_config.py  validators.py
tests/: conftest.py  test_photoflow.py
tests/unit/: test_core.py  test_file_manager.py  test_validators.py
